<resources>
    <string name="app_name">PokeFight</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">home</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="logo">goHorse Inc.</string>
    <string name="incio">Home</string>
    <string name="jogar">Play</string>
    <string name="buscar">Search</string>
    <string name="sobre">About</string>
    <string name="sair">Leave</string>
    <string name="btnVitoria">Win</string>
    <string name="btnEmpate">Draw</string>
    <string name="btnDerrota">Lose</string>
    <string name="novoJogo">New Game</string>
    <string name="vitorias">Victories: </string>
    <string name="derrotas">Defeats:   </string>
    <string name="escolhagenracao">Select generation</string>
    <string name="btnJogar">Start</string>
    <string name="aboutDescription">O PokeFight é um projeto em andamento sendo essa a primeira versão.</string>
    <string name="produzido">Produzido por:</string>
    <string name="produtor1">Bruno Martins de Carvalho</string>
    <string name="produtor2">Lucas Ferreira Rodrigues</string>



    <string name="title_activity_pre_jogo_fragment">PreJogoFragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_buscar">BuscarActivity</string>
</resources>
